--- a/questions.html
+++ b/questions.html
@@ -89,19 +89,73 @@
         <div class="main_wrapper">
             <div class="quest_wrap">
                 <div class="quest_wrap_questions">КАК ДОЛГО ИЗГОТАВЛИВАЕТСЯ МЕБЕЛЬ ПО ИНДИВИДУАЛЬНОМУ ЗАКАЗУ?
-                    <div class="quest_wrap_questions_plus"></div>
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
                 </div>
                 <div class="quest_wrap_answer">СРОК ИЗГОТОВЛЕНИЯ ОТ 14 ДО 60 ДНЕЙ В ЗАВИСИМОСТИ ОТ СЛОЖНОСТИ ЗАКАЗА</div>
-                <div class="quest_wrap_questions">ЗАЧЕМ МНЕ МЕБЕЛЬ?</div>
+                <div class="quest_wrap_questions">ЗАЧЕМ МНЕ МЕБЕЛЬ?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
                 <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio accusantium laudantium voluptatem illo quisquam cum harum, debitis soluta nam enim reprehenderit eveniet unde totam sint, mollitia saepe adipisci, quo fugiat.</div>
-                <div class="quest_wrap_questions">КАКИЕ МАТЕРИАЛЫ ИСПОЛЬЗУЮТСЯ ПРИ ИЗГОТОВЛЕНИИ?</div>
+                <div class="quest_wrap_questions">КАКИЕ МАТЕРИАЛЫ ИСПОЛЬЗУЮТСЯ ПРИ ИЗГОТОВЛЕНИИ?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
                 <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, omnis. Eligendi iusto, blanditiis pariatur soluta maiores recusandae. Harum officiis repudiandae unde aliquam facilis, magni ipsum provident voluptates nisi officia maxime.</div>
-                <div class="quest_wrap_questions">КАК ДОЛГО ДЛИТСЯ ДОСТАВКА?</div>
+                <div class="quest_wrap_questions">КАК ДОЛГО ДЛИТСЯ ДОСТАВКА?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
                 <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minima velit nobis sint repudiandae officiis explicabo possimus ad accusamus? Asperiores, amet optio! Commodi reiciendis atque sunt autem, sequi exercitationem veritatis?</div>
-                <div class="quest_wrap_questions">КТО ГАРАНТИРУЕТ ИСПОЛНЕНИЕ ЗАКАЗА?</div>
+                <div class="quest_wrap_questions">КТО ГАРАНТИРУЕТ ИСПОЛНЕНИЕ ЗАКАЗА?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
                 <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia dolores exercitationem cupiditate natus iure nisi est eum reprehenderit placeat adipisci itaque unde voluptates, ab, molestiae ut ipsa repellendus assumenda magnam. Earum
                     eum deserunt, quas minima ad ab vero soluta maiores reprehenderit inventore. Id quis nemo dicta omnis, dolore maxime, amet quam iusto placeat ipsa nulla quidem minima ad, eum velit!</div>
+                <div class="quest_wrap_questions">КАК ЭТО РАБОТАЕТ?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, cupiditate culpa obcaecati ipsam provident quia enim recusandae atque pariatur! Cupiditate at corporis quam mollitia fugiat totam perferendis culpa ab pariatur. Aperiam ipsum
+                    rem hic molestias praesentium, placeat quis! Ipsam, voluptatum. Illo officiis accusamus, quis excepturi aliquam minima dolore doloribus corporis tenetur tempora, culpa quasi quisquam sunt natus quibusdam cupiditate quae? Quas culpa
+                    quos vel quam dolorem repellendus rerum. Consequuntur deleniti, sequi inventore alias ut exercitationem quasi error commodi amet magni esse. Eligendi quas totam laudantium, quisquam soluta laboriosam dolorum nam.</div>
+                <div class="quest_wrap_questions">ЗАЧЕМ НУЖНА МЕБЕЛЬ?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquam dicta, nulla doloremque, ratione corporis officia, esse officiis amet reprehenderit rerum dignissimos? Exercitationem, a quisquam repellat harum veritatis dicta atque obcaecati!
+                    Voluptatem magni natus, rem quia esse cupiditate ab voluptatibus nobis voluptatum non voluptate voluptas quod molestiae dolorem. Id animi, veritatis sint minima iusto deleniti, aliquid necessitatibus, culpa quidem alias dicta? Neque,
+                    hic! Alias, suscipit. Maxime, temporibus vero. Deleniti non eius sequi consectetur tenetur temporibus libero sint vitae labore, quisquam sed modi cupiditate totam ex, placeat inventore corporis neque aspernatur? Iste. Dolor placeat
+                    corporis quaerat quo aperiam expedita sunt doloremque veritatis tenetur? Iste rem fuga veritatis exercitationem excepturi! Sunt ratione veritatis sint, error pariatur earum at veniam ipsam eligendi excepturi quis? Voluptate laboriosam
+                    beatae sed distinctio. Dolorum, amet a corporis nostrum at maiores vel architecto praesentium, dolores itaque recusandae? Corrupti doloremque iure repellendus est fuga laudantium possimus accusantium impedit corporis quis!</div>
+                <div class="quest_wrap_questions">КАК ДОЛГО Я БУДУ ЭТО ИЗУЧАТЬ?
+                    <div class="plus">
+                        <div class="vert"></div>
+                        <div class="gorinont"></div>
+                    </div>
+                </div>
+                <div class="quest_wrap_answer">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sint placeat sed, delectus laudantium voluptatibus culpa ad autem sequi ab reiciendis impedit, pariatur est repudiandae dolore distinctio nihil quam fugiat dolor. Error, sed architecto.
+                    Quod tenetur itaque dolor illum, temporibus sequi tempora ea, qui eligendi labore quo aliquam quos omnis nemo ex cumque vero magnam obcaecati consectetur. Expedita quas nam libero. Porro optio quaerat excepturi commodi expedita voluptas
+                    minima atque accusamus nemo cum illum ipsa, explicabo sequi qui aperiam! Perferendis maxime corporis id dicta quas impedit voluptate non beatae error et. Ducimus rerum, reprehenderit dolore maxime quo tempora rem quia sit suscipit
+                    ratione odio error nulla culpa quis odit! Provident ducimus temporibus sunt quas maxime deserunt ipsum nulla accusamus veritatis a?</div>
             </div>
+
         </div>
 
 
