--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="#">Доставка</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Kонтакты</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/zakaz.html">Kонтакты</a></li>
                     </ul>
                 </nav>
                 <div class="header_wrap">
