--- a/questions.html
+++ b/questions.html
@@ -29,7 +29,7 @@
                 <nav class="nav">
                     <ul class="nav-menu__info">
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">О нас</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link--active" href="#">Каталог</a></li>
                         <li class="nav-menu__info-item">
@@ -58,7 +58,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="#">Доставка</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Kонтакты</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/zakaz.html">Kонтакты</a></li>
                     </ul>
                 </nav>
                 <div class="header_wrap">
