--- a/zakaz.html
+++ b/zakaz.html
@@ -29,13 +29,13 @@
                 <nav class="nav">
                     <ul class="nav-menu__info">
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">О нас</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link--active" href="#">Каталог</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="#">Услуги</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Вопрос-ответ</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/questions.html">Вопрос-ответ</a></li>
                     </ul>
                 </nav>
                 <div class="header_logo">
