--- a/questions.html
+++ b/questions.html
@@ -31,11 +31,11 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link--active" href="#">Каталог</a></li>
+                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Услуги</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/uslugi.html">Услуги</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Вопрос-ответ</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/questions.html">Вопрос-ответ</a></li>
                     </ul>
                 </nav>
                 <div class="header_logo">
@@ -52,13 +52,13 @@
                 <nav class="nav">
                     <ul class="nav-menu__info">
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Новости</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="#">Мебель по помещениям</a></li>
+                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель по помещениям</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="#">Доставка</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/dostavka.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/zakaz.html">Kонтакты</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/contacts.html">Kонтакты</a></li>
                     </ul>
                 </nav>
                 <div class="header_wrap">
