--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель по помещениям</a></li>
+                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель в доме</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/dostavka.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
@@ -93,25 +93,25 @@
     <!-- About us -->
     <section class="out-wrapper section-about_us">
         <div class="about__wrap">
-            <div class="about__wrap_text">
-                <h2 class="about__wrap__text_title">О НАС</h2>
-                <article class="about__wrap__text_inner">
-                    Мы — компания с многолетним опытом, которая в течение почти десятка лет занимается производством пиломатериалов и изделий из них. О дереве мы знаем все! И готовы делиться своим опытом с вами. Наши консультанты всегда окажут квалифицированную помощь при
-                    выборе товаров с учетом индивидуальных требований Заказчика.
-                </article>
-                <article class="about__wrap__text_inner">
-                    <p>Покупая продукцию у “Добродрев” вы одновременно приобретаете уверенность в высоком качестве, безопасности и долговечности изделий. При производстве используется только лучшая древесина из экологически чистых районов Беларуси.</p>
-                </article>
-                <article class="about__wrap__text_inner">
-                    <p>Процесс изготовления производится с применением высокотехнологичного оборудования, которое позволяет получать пиломатериал, соответствующий всем существующим европейским стандартам. А благодаря неоднократной обработке профильных лицевых
-                        изделий, они приобретают отменный внешний вид, способный удивить даже самого требовательного клиента.</p>
-                </article>
-                <a class="about__wrap__text_link" href="#">перейти в галерею ></a>
-            </div>
+
+            <h2 class="about__wrap_title">О НАС</h2>
+            <article class="about__wrap_inner">
+                Мы — компания с многолетним опытом, которая в течение почти десятка лет занимается производством пиломатериалов и изделий из них. О дереве мы знаем все! И готовы делиться своим опытом с вами. Наши консультанты всегда окажут квалифицированную помощь при
+                выборе товаров с учетом индивидуальных требований Заказчика.
+            </article>
+            <article class="about__wrap_inner">
+                <p>Покупая продукцию у “Добродрев” вы одновременно приобретаете уверенность в высоком качестве, безопасности и долговечности изделий. При производстве используется только лучшая древесина из экологически чистых районов Беларуси.</p>
+            </article>
+            <article class="about__wrap_inner">
+                <p>Процесс изготовления производится с применением высокотехнологичного оборудования, которое позволяет получать пиломатериал, соответствующий всем существующим европейским стандартам. А благодаря неоднократной обработке профильных лицевых
+                    изделий, они приобретают отменный внешний вид, способный удивить даже самого требовательного клиента.</p>
+            </article>
+            <a class="about__wrap_link" href="https://paulsamsonov-en.github.io/drevtorg1/article_about.html">перейти в галерею ></a>
+
 
         </div>
         <div class="about__wrap__image">
-            <!--<img class="about__wrap__image_item" src="src/img/interer_1.png" alt="интерьер">--></div>
+            <img class="about__wrap__image_item" src="src/img/interer_1.png" alt="интерьер"></div>
 
     </section>
     <!-- /About us -->
@@ -192,23 +192,23 @@
 
 
     <section class="out-wrapper section-about_us">
-        <div class="about__wrap__image_2"></div>
+        <div class="about__wrap__image_2"> <img src="src/img/interer_2.png" alt=""></div>
         <div class="about__wrap">
-            <div class="about__wrap_text">
-                <h2 class="about__wrap__text_title">ЗАБОТИМСЯ О ВАС</h2>
-                <article class="about__wrap__text_inner">
-                    Мы используем только проверенные и нетоксичные расходные материалы и смолы, контролируем производство.
-                </article>
-                <article class="about__wrap__text_inner">
-                    Мебель, произведенная нашей компанией отличается надежностью, длительным сроком эксплуатации и изящным внешним видом. Теперь желающим заметно преобразить свое жилище не придется платить баснословные суммы за изделия от зарекомендовавших себя мировых брендов,
-                    ведь мы сделали премиальную мебель доступной.
-                </article>
-                <article class="about__wrap__text_inner">
-                    Благодаря сдержанной роскоши дизайнерского стиля выпускаемая мебель прекрасно вписываются в различные типы интерьеров. Элитные диваны, стулья и кресла дополнят слегка вычурный, но, в то же время, элегантный шебби-шик, станут акцентом при исполнении современных
-                    интерьерных решений, подчеркнут роскошь жилища в стиле ампир, придадут эксклюзивности романтичному французскому «Провансу».
-                </article>
-                <a class="about__wrap__text_link" href="#">Подробнее</a>
-            </div>
+
+            <h2 class="about__wrap_title">ЗАБОТИМСЯ О ВАС</h2>
+            <article class="about__wrap_inner">
+                Мы используем только проверенные и нетоксичные расходные материалы и смолы, контролируем производство.
+            </article>
+            <article class="about__wrap_inner">
+                Мебель, произведенная нашей компанией отличается надежностью, длительным сроком эксплуатации и изящным внешним видом. Теперь желающим заметно преобразить свое жилище не придется платить баснословные суммы за изделия от зарекомендовавших себя мировых брендов,
+                ведь мы сделали премиальную мебель доступной.
+            </article>
+            <article class="about__wrap_inner">
+                Благодаря сдержанной роскоши дизайнерского стиля выпускаемая мебель прекрасно вписываются в различные типы интерьеров. Элитные диваны, стулья и кресла дополнят слегка вычурный, но, в то же время, элегантный шебби-шик, станут акцентом при исполнении современных
+                интерьерных решений, подчеркнут роскошь жилища в стиле ампир, придадут эксклюзивности романтичному французскому «Провансу».
+            </article>
+            <a class="about__wrap_link" href="https://paulsamsonov-en.github.io/drevtorg1/article_about.html">Подробнее</a>
+
 
         </div>
 
