--- a/questions.html
+++ b/questions.html
@@ -54,7 +54,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель по помещениям</a></li>
+                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель в доме</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/dostavka.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
