--- a/price-katalog.html
+++ b/price-katalog.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Добродрев Заказ</title>
+    <title>Добродрев каталог</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/normalize.css">
 
@@ -33,7 +33,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/uslugi.html">Услуги</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/questions.html">Вопрос-ответ</a></li>
                     </ul>
@@ -54,11 +54,11 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель в доме</a></li>
+                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/dostavka.html">Доставка</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/contacts.html">Kонтакты</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/order.html">Kонтакты</a></li>
                     </ul>
                 </nav>
                 <div class="header_wrap">
@@ -77,46 +77,22 @@
     <!-- questions head -->
     <section class="out-wrapper section-head_questions">
         <div class="main_wrapper">
-            <h1 class="section-head_questions">КОНТАКТЫ</h1>
+            <h1 class="section-head_questions">КАТАЛОГ ПРОДУКЦИИ</h1>
 
         </div>
     </section>
     <!--/ questions head -->
 
     <!-- section-block -->
-    <section class="out-wrapper section-">
+    <section class="out-wrapper section-dev">
         <div class="main_wrapper">
+            <h3 class="section-dev-text">Данный материал находится в разработке. <a href="https://paulsamsonov-en.github.io/drevtorg1/order.html">напишите нам</a></h3>
 
-            </form>
 
         </div>
 
 
     </section>
-    <!-- /section-block -->
-
-    <!-- pay and way-->
-    <section class="out-wrapper section-pay">
-        <div class="main_wrapper">
-
-        </div>
-    </section>
-    <!-- /pay and way-->
-
-    <!-- map-->
-    <section class="out-wrapper section-map">
-
-
-
-    </section>
-    <!-- map-->
-    <!-- reclam-->
-    <section class="out-wrapper section-reclam">
-        <div class="main_wrapper">
-
-        </div>
-    </section>
-    <!-- /reclam-->
 
 
 
