--- a/article_about.html
+++ b/article_about.html
@@ -33,7 +33,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/uslugi.html">Услуги</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/questions.html">Вопрос-ответ</a></li>
                     </ul>
@@ -54,11 +54,11 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/mebel.html">Мебель в доме</a></li>
+                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/dostavka.html">Доставка</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/contacts.html">Kонтакты</a></li>
+                            <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/order.html">Kонтакты</a></li>
                     </ul>
                 </nav>
                 <div class="header_wrap">
