--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" type="text/css" href="src/slick/slick-theme.css" />
     <link rel="stylesheet" href="src/PhotoSwipe/dist/photoswipe.css">
     <link rel="stylesheet" href="src/PhotoSwipe/dist/default-skin/default-skin.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 
     <script src="https://kit.fontawesome.com/540b40f7e5.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
