--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@
     <title>Добродрев НОВОСТИ</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 
 
 
