--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                         <img class="bestsaller_block_image" src="src/img/dosk/doscka_2.png" alt="doska">
                         <div class="bestsaller_block_item">
                             <div class="bestsaller_block_item_text">
-                                <div class="bestsaller_block_item_text_title"> Брус строганный (техническая сушка)</div>
+                                <div class="bestsaller_block_item_text_title"> Брус строганный </div>
                                 <div class="bestsaller_block_item_text_subtitle">20 X 40 см</div>
                             </div>
                             <div class="bestsaller_block_item_subtitle-btn">В корзину</div>
@@ -167,7 +167,7 @@
                         <img class="bestsaller_block_image" src="src/img/dosk/doscka_2.png" alt="doska">
                         <div class="bestsaller_block_item">
                             <div class="bestsaller_block_item_text">
-                                <div class="bestsaller_block_item_text_title"> Брус строганный (техническая сушка)</div>
+                                <div class="bestsaller_block_item_text_title"> Брус строганный </div>
                                 <div class="bestsaller_block_item_text_subtitle">14 X 88 мм</div>
                             </div>
                             <div class="bestsaller_block_item_subtitle-btn">В корзину</div>
