--- a/news.html
+++ b/news.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/normalize.css">
     <link rel="stylesheet" href="src/css/responsive.css">
-
+    <link rel="stylesheet" href="src/css/responsive.css">
 
 
 
