add menu burger

--- a/offers.html
+++ b/offers.html
@@ -8,6 +8,7 @@
     <title>Добродрев Заказ</title>
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="stylesheet" href="src/css/normalize.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 
 
 
@@ -15,7 +16,7 @@
 
     <script src="https://kit.fontawesome.com/540b40f7e5.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
-
+    <script src="src/js/adaptive_burger.js"></script>
 
 
 </head>
@@ -49,6 +50,27 @@
                     </div>
 
                 </div>
+                <div class="header_burger"><span></span></div>
+
+                <ul class="nav-menu__burger">
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/questions.html">Вопрос-ответ</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
+                    <li class="nav-menu__burger-item ">
+                        <a class="nav-menu__burger-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/order.html">Kонтакты</a></li>
+                </ul>
+
                 <nav class="nav">
                     <ul class="nav-menu__info">
                         <li class="nav-menu__info-item">
