--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="src\PhotoSwipe\dist\photoswipe.min.js"></script>
     <script src="src\PhotoSwipe\dist\photoswipe-ui-default.min.js"></script>
+    <script src="src/js/adaptive_burger.js"></script>
     <script src="src/js/script.js"></script>
 
 </head>
@@ -51,6 +52,27 @@
                     </div>
 
                 </div>
+                <div class="header_burger"><span></span></div>
+
+                <ul class="nav-menu__burger">
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/questions.html">Вопрос-ответ</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
+                    <li class="nav-menu__burger-item ">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
+                    <li class="nav-menu__burger-item">
+                        <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/order.html">Kонтакты</a></li>
+                </ul>
+
                 <nav class="nav">
                     <ul class="nav-menu__info">
                         <li class="nav-menu__info-item">
