--- a/furniture.html
+++ b/furniture.html
@@ -33,7 +33,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
+                            <a class="nav-menu__info-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
                         <li class="nav-menu__info-item">
@@ -57,7 +57,7 @@
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                     <li class="nav-menu__burger-item">
-                        <a class="nav-menu__burger-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
+                        <a class="nav-menu__burger-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
                     <li class="nav-menu__burger-item">
@@ -65,7 +65,7 @@
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                     <li class="nav-menu__burger-item ">
-                        <a class="nav-menu__burger-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
+                        <a class="nav-menu__burger-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
                     <li class="nav-menu__burger-item">
@@ -77,7 +77,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
+                            <a class="nav-menu__info-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
@@ -110,7 +110,11 @@
     <section class="out-wrapper section-dev">
         <div class="main_wrapper">
             <h3 class="section-dev-text">Данный материал находится в разработке. <a href="https://paulsamsonov-en.github.io/drevtorg1/order.html">напишите нам</a></h3>
-
+            <p class="section-dev-desk" style="padding: 45px;">Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt reprehenderit impedit, magnam praesentium tenetur fuga tempore laboriosam doloremque eum et aut suscipit porro eaque alias culpa in ab ex sed? Autem repellat ratione omnis natus,
+                reprehenderit aut dolor aspernatur facilis quas exercitationem dignissimos quisquam atque placeat asperiores recusandae neque ad perspiciatis? Excepturi, perspiciatis ullam. Blanditiis quidem quas reprehenderit accusamus ullam! Cum unde
+                saepe vitae ratione praesentium, maiores earum repudiandae pariatur voluptatibus assumenda laboriosam ut esse provident magnam, maxime temporibus facere iure nostrum exercitationem suscipit a tenetur iste totam nemo. Debitis? Commodi reprehenderit
+                sunt modi at voluptatem cum itaque nisi enim labore placeat debitis aut, consequuntur officiis iusto cupiditate reiciendis ut delectus laudantium! Consequatur quasi dolor earum nisi, enim quis odio?</p>
+            <p style=" text-align: center;"><img src="src/img/news/03.jpg" alt="#"></p>
 
         </div>
 
