--- a/article_about.html
+++ b/article_about.html
@@ -32,7 +32,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                         <li class="nav-menu__info-item">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
+                            <a class="nav-menu__info-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
                         <li class="nav-menu__info-item">
@@ -56,7 +56,7 @@
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/index.html">О нас</a></li>
                     <li class="nav-menu__burger-item">
-                        <a class="nav-menu__burger-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
+                        <a class="nav-menu__burger-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/price-katalog.html">Каталог</a></li>
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/offers.html">Услуги</a></li>
                     <li class="nav-menu__burger-item">
@@ -64,7 +64,7 @@
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__burger-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                     <li class="nav-menu__burger-item ">
-                        <a class="nav-menu__burger-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
+                        <a class="nav-menu__burger-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
                     <li class="nav-menu__burger-item">
                         <a class="nav-menu__iburgeritem-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
                     <li class="nav-menu__burger-item">
@@ -76,7 +76,7 @@
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/news.html">Новости</a></li>
                         <li class="nav-menu__info-item ">
-                            <a class="nav-menu__info-item-link--active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
+                            <a class="nav-menu__info-item-link active" href="https://paulsamsonov-en.github.io/drevtorg1/furniture.html">Мебель в доме</a></li>
                         <li class="nav-menu__info-item">
                             <a class="nav-menu__info-item-link" href="https://paulsamsonov-en.github.io/drevtorg1/delivery.html">Доставка</a></li>
                         <li class="nav-menu__info-item">
