--- a/offers.html
+++ b/offers.html
@@ -113,7 +113,7 @@
                 reprehenderit aut dolor aspernatur facilis quas exercitationem dignissimos quisquam atque placeat asperiores recusandae neque ad perspiciatis? Excepturi, perspiciatis ullam. Blanditiis quidem quas reprehenderit accusamus ullam! Cum unde
                 saepe vitae ratione praesentium, maiores earum repudiandae pariatur voluptatibus assumenda laboriosam ut esse provident magnam, maxime temporibus facere iure nostrum exercitationem suscipit a tenetur iste totam nemo. Debitis? Commodi reprehenderit
                 sunt modi at voluptatem cum itaque nisi enim labore placeat debitis aut, consequuntur officiis iusto cupiditate reiciendis ut delectus laudantium! Consequatur quasi dolor earum nisi, enim quis odio?</p>
-            <p style=" text-align: center;"><img src="src/img/news/03.jpg" alt="#"></p>
+            <p class="section-dev-image" style=" text-align: center;"><img src="src/img/news/03.jpg" alt="#"></p>
 
         </div>
 
